--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "peerjs": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "roslib": "^1.4.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
