--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/d3-format": "^3.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
