--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=80 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=80 start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "peerjs": "^1.5.4",
     "react": "^18",
